Document PPDG/src/objects/Branch_Observation_Form__c.object
<CustomObject>
    <fields>
        <fullName>Staff_Member_Summarised__c</fullName>
        <inlineHelpText>Staff member summarized what has been done for them and what will happen next with SLA&apos;s of Cards, PIB, etc.</inlineHelpText>
        <label>Staff Member Summarised</label>
        <picklist>
            <picklistValues>
                <fullName>Pass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Minor Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Major Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fail</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Staff_Member_s_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Staff Member&apos;s Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Branch_Observation_Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Staff_Signature__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Staff Signature</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Branch_Observation_Forms3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TOPIC_Area_of_improvement__c</fullName>
        <inlineHelpText>What is the specific area of improvement?</inlineHelpText>
        <label>TOPIC - Area of improvement?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>T_Cs__c</fullName>
        <label>T&amp;Cs Explained including Sharia</label>
        <picklist>
            <controllingField>Type_of_Observation__c</controllingField>
            <picklistValues>
                <fullName>Pass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Minor Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Major Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>T_Cs_explained_cross_sale__c</fullName>
        <label>T&amp;Cs explained for cross sales</label>
        <picklist>
            <picklistValues>
                <fullName>Pass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Minor Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Major Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fail</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Tone_Pace_Clarity__c</fullName>
        <inlineHelpText>Speaks clearly, at appropriate pace, pitch varied to emphasize importance where applicable.</inlineHelpText>
        <label>Tone, Pace &amp; Clarity</label>
        <picklist>
            <picklistValues>
                <fullName>Pass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Minor Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Major Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fail</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total_Points_Scored_del__c</fullName>
        <label>Total Points Scored</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type_of_Observation__c</fullName>
        <label>Type of Observation</label>
        <picklist>
            <picklistValues>
                <fullName>Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enquiry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meeting</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>WILL_Commitment_s_agreed_to__c</fullName>
        <inlineHelpText>What specific actions/activities will they do? When?</inlineHelpText>
        <label>WILL - Commitment(s) agreed to?</label>
        <type>TextArea</type>
    </fields>
    <label>Branch Observation Form</label>
    <nameField>
        <displayFormat>Form{000}</displayFormat>
        <label>Branch Observation Form Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Branch Observation Forms</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>